# bayesm-py

./: CONVERSION_NOTES.md  README.md
python/: README.md  pyproject.toml  setup.py
python/bayesm/: __init__.py  cluster_mix.py  cond_mom.py  constants.py  create_x.py  data_loaders.py  e_mix_marg_den.py  llmnp.py  llnhlogit.py  log_marg_den_nr.py  mix_den.py  mnl_hess.py  mnp_prob.py  mom_mix.py  num_eff.py  plotting.py  rDPGibbs.py  rbayesBLP.py  rbprobitGibbs.py  rhierLinearMixture.py  rhierLinearModel.py  rhierMnlDP.py  rhierMnlRwMixture.py  rhierNegbinRw.py  rivDP.py  rivGibbs.py  rmnlIndepMetrop.py  rmnpGibbs.py  rmvpGibbs.py  rnegbinRw.py  rnmixGibbs.py  rordprobitGibbs.py  rscaleUsage.py  rsurGibbs.py  runireg.py  runiregGibbs.py  simnhlogit.py  summary.py  utilities.py
python/bayesm/_cpp/: __init__.py
python/bayesm/data/: Scotch.csv  Scotch.parquet  bank_choiceAtt.csv  bank_choiceAtt.parquet  bank_demo.csv  bank_demo.parquet  camera.csv  camera.parquet  cheese.parquet  customerSat.csv  customerSat.parquet  detailing_counts.csv  detailing_counts.parquet  detailing_demo.csv  detailing_demo.parquet  margarine_choicePrice.csv  margarine_choicePrice.parquet  margarine_demos.csv  margarine_demos.parquet  orangeJuice_storedemo.csv  orangeJuice_storedemo.parquet  orangeJuice_yx.parquet  tuna.parquet  tuna_tuna.csv
python/cpp_bindings/: CMakeLists.txt  bayesm_bindings.cpp
python/cpp_bindings/include/: bayesm.h
python/cpp_bindings/src/: breg_rcpp.cpp  callroot_rcpp.cpp  llmnl_rcpp.cpp  lndIChisq_rcpp.cpp  lndIWishart_rcpp.cpp  lndMvst_rcpp.cpp  rbayesBLP_rcpp_loop.cpp  rbprobitGibbs_rcpp_loop.cpp  rdirichlet_rcpp.cpp  rdpGibbs_rcpp_loop.cpp  rhierLinearMixture_rcpp_loop.cpp  rhierLinearModel_rcpp_loop.cpp  rhierMnlDP_rcpp_loop.cpp  rhierMnlRwMixture_rcpp_loop.cpp  rhierNegbinRw_rcpp_loop.cpp  rivDP_rcpp_loop.cpp  rivGibbs_rcpp_loop.cpp  rmixGibbs_rcpp.cpp  rmnlIndepMetrop_rcpp_loop.cpp  rmnpGibbs_rcpp_loop.cpp  rmultireg_rcpp.cpp  rmvpGibbs_rcpp_loop.cpp  rmvst_rcpp.cpp  rnegbinRw_rcpp_loop.cpp  rordprobitGibbs_rcpp_loop.cpp  rscaleUsage_rcpp_loop.cpp  rsurGibbs_rcpp_loop.cpp  rtrun_rcpp.cpp  runiregGibbs_rcpp_loop.cpp  runireg_rcpp_loop.cpp  rwishart_rcpp.cpp
python/tests/: test_cond_mom.py  test_constants.py  test_create_x.py  test_num_eff.py  test_utilities.py
tests/: test_all.py  test_cluster_summary.py  test_mnp.py  test_nhlogit.py  test_phase2.py  test_phase3.py  test_rDPGibbs.py  test_rbayesBLP.py  test_rbprobitGibbs.py  test_rhierLinearMixture.py  test_rhierLinearModel.py  test_rhierMnlDP.py  test_rhierMnlRwMixture.py  test_rhierNegbinRw.py  test_rivDP.py  test_rivGibbs.py  test_rmnlIndepMetrop.py  test_rmnpGibbs.py  test_rmvpGibbs.py  test_rnegbinRw.py  test_rnmixGibbs.py  (+5 more)
